--- a/app/src/main/res/layout/timer_settings.xml
+++ b/app/src/main/res/layout/timer_settings.xml
@@ -4,7 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Timer.TimerSettings">
+    tools:context=".Timer.TimerSettings"
+    tools:layout_editor_absoluteY="25dp">
+
+    <TextView
+        android:id="@+id/title_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/timer_title_text"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/title_ts"
+        app:layout_constraintEnd_toEndOf="@+id/title_ts"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/title_ts" />
 
     <EditText
         android:id="@+id/title_ts"
@@ -12,59 +27,266 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/timer_title"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/focus_ts"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toTopOf="@+id/focus_hours_ts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/focus_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/focus_timer_text"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/focus_hours_ts"
+        app:layout_constraintEnd_toEndOf="@+id/focus_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/focus_hours_ts" />
+
     <EditText
-        android:id="@+id/focus_ts"
+        android:id="@+id/focus_hours_ts"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:hint="@string/focus_timer"
-        android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/short_break_ts"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toTopOf="@+id/short_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/focus_hours_text_ts"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_ts" />
 
-    <EditText
-        android:id="@+id/short_break_ts"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/focus_hours_text_ts"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="@string/short_break_timer"
-        android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/long_break_ts"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/hours"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/focus_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/focus_minutes_ts"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/focus_ts" />
+        app:layout_constraintStart_toEndOf="@+id/focus_hours_ts"
+        app:layout_constraintTop_toTopOf="@+id/focus_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/long_break_ts"
+        android:id="@+id/focus_minutes_ts"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/long_break_timer"
-        android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/wait_long_break_ts"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toBottomOf="@+id/focus_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/focus_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/focus_hours_text_ts"
+        app:layout_constraintTop_toTopOf="@+id/focus_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/focus_minutes_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/minutes"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/focus_minutes_ts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/focus_minutes_ts"
+        app:layout_constraintTop_toTopOf="@+id/focus_minutes_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/short_break_title_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/short_break_title"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/short_break_hours_ts"
+        app:layout_constraintEnd_toEndOf="@+id/short_break_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/short_break_hours_ts" />
+
+    <EditText
+        android:id="@+id/short_break_hours_ts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toTopOf="@+id/long_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/short_break_hours_text_ts"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/short_break_ts" />
+        app:layout_constraintTop_toBottomOf="@+id/focus_hours_ts" />
+
+    <TextView
+        android:id="@+id/short_break_hours_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/hours"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/short_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/short_break_minutes_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/short_break_hours_ts"
+        app:layout_constraintTop_toTopOf="@+id/short_break_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/short_break_minutes_ts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toBottomOf="@+id/short_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/short_break_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/short_break_hours_text_ts"
+        app:layout_constraintTop_toTopOf="@+id/short_break_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/short_break_minutes_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/minutes"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/short_break_minutes_ts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/short_break_minutes_ts"
+        app:layout_constraintTop_toTopOf="@+id/short_break_minutes_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/long_break_title_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/timer_long_break_text"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/long_break_hours_ts"
+        app:layout_constraintEnd_toEndOf="@+id/long_break_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/long_break_hours_ts" />
+
+    <EditText
+        android:id="@+id/long_break_hours_ts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toTopOf="@+id/wait_long_break_ts"
+        app:layout_constraintEnd_toStartOf="@+id/long_break_hours_text_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/short_break_hours_ts" />
+
+    <TextView
+        android:id="@+id/long_break_hours_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/hours"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/long_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/long_break_minutes_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/long_break_hours_ts"
+        app:layout_constraintTop_toTopOf="@+id/long_break_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/long_break_minutes_ts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toBottomOf="@+id/long_break_hours_ts"
+        app:layout_constraintEnd_toStartOf="@+id/long_break_minutes_text_ts"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/long_break_hours_text_ts"
+        app:layout_constraintTop_toTopOf="@+id/long_break_hours_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/long_break_minutes_text_ts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/minutes"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/long_break_minutes_ts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/long_break_minutes_ts"
+        app:layout_constraintTop_toTopOf="@+id/long_break_minutes_ts"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/long_break_title_ts2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/sessions_long_break_text"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/wait_long_break_ts"
+        app:layout_constraintEnd_toEndOf="@+id/wait_long_break_ts"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/wait_long_break_ts" />
 
     <EditText
         android:id="@+id/wait_long_break_ts"
@@ -73,13 +295,13 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:hint="@string/repetition_before_long"
         android:inputType="number"
+        android:textColor="@color/colorBase"
         app:layout_constraintBottom_toTopOf="@+id/submit_ts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/long_break_ts" />
+        app:layout_constraintTop_toBottomOf="@+id/long_break_hours_ts" />
 
     <Button
         android:id="@+id/submit_ts"
@@ -97,4 +319,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wait_long_break_ts" />
+
 </android.support.constraint.ConstraintLayout>
